# little-lairs

./: .gitignore  app.py  generate.py  index.html
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/core/: artifact.py  parser.py  scorer.py  verifier.py
api/db/: schema.sql  session.py
api/routers/: benchmarks.py  leaderboard.py  models.py  prompts.py  runs.py
api/scripts/: backfill_sqlite.py
api/tests/: test_artifact.py  test_parser.py  test_scorer.py  test_verifier.py
docs/: index.html
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/changelog/: page.tsx
frontend/app/limitations/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/models/[provider]/[model]/: page.tsx
frontend/app/reproduce/: page.tsx
frontend/app/runs/[run_id]/: page.tsx
frontend/components/: LeaderboardTable.tsx  Nav.tsx
frontend/lib/: api.ts  utils.ts
frontend/types/: index.ts
infra/: docker-compose.yml
